# ITMO

OOP labs/4/: Backup.cpp  Backup.h  BackupManager.cpp  BackupManager.h  CMakeLists.txt  FileRestoreInfo.h  RestorePoint.cpp  RestorePoint.h  main.cpp
OOP labs/4/clean/: AllHybridCleanStrategy.cpp  AllHybridCleanStrategy.h  AnyHybridCleanStrategy.cpp  AnyHybridCleanStrategy.h  CleanStrategy.h  CountCleanStrategy.cpp  CountCleanStrategy.h  DateCleanStrategy.cpp  DateCleanStrategy.h  SizeCleanStrategy.cpp  SizeCleanStrategy.h
OOP labs/4/restore/: FullRestoreStrategy.cpp  FullRestoreStrategy.h  IncrementalRestoreStrategy.cpp  IncrementalRestoreStrategy.h  RestoreStrategy.cpp  RestoreStrategy.h
OOP labs/5/: AccountCreatedListener.h  AccountFactory.cpp  AccountFactory.h  AccountSnapshot.cpp  AccountSnapshot.h  Bank.cpp  Bank.h  CMakeLists.txt  DateController.cpp  DateController.h  DateListener.h  Transaction.cpp  Transaction.h  User.cpp  User.h  main.cpp
OOP labs/5/accounts/: Account.cpp  Account.h  CreditAccount.cpp  CreditAccount.h  DebitAccount.cpp  DebitAccount.h  DepositAccount.cpp  DepositAccount.h
OOP labs/6/: Controller.cpp  Controller.h  Employee.cpp  Employee.h  EmployeeList.cpp  EmployeeList.h  General.cpp  General.h  Report.cpp  Report.h  ReportList.cpp  ReportList.h  SprintDraft.cpp  SprintDraft.h  SprintReport.cpp  SprintReport.h  Task.cpp  Task.h  TaskList.cpp  TaskList.h  TeamleadWrapper.cpp  TeamleadWrapper.h  TimedPost.cpp  TimedPost.h  UI.cpp  UI.h  main.cpp
OOP labs/InIParser/: exceptions.hpp  file.ini  main.cpp  parser.cpp  parser.hpp
(+30 files in other folders)
